--- a/Sekolah-Koding/style.css
+++ b/Sekolah-Koding/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 .container {
-  width: 960px;
-  height: 900px;
+  width: 80vw;
+  height: 100vh;
   margin: 20px auto;
   background-color: #f1f1f4;
   border: 4px solid hsl(219, 63%, 54%);
